<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Toeic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_menu_read">Reading</string>
    <string name="text_menu_listen">Listening</string>
    <string name="text_menu_tip">Tips</string>
    <string name="text_menu_setting">Settings</string>
    <string name="text_menu_about">About</string>
    <string name="text_part">PART</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>

    <!-- MESSAGE -->
    <string name="message_are_you_sure">Are you sure?</string>
    <string name="message_do_not_show">Do not show again</string>

    <!-- TIP MESSAGE -->
    <string name="reading_direction">In the Reading test, you will read a variety of texts and answer several different types of reading comprehension questions. The entire Reading test will last 75 minutes. There are three parts, and directions are given for each part. You are encouraged to answer as many questions as possible within the time allowed.</string>
    <string name="reading_direction_part1">A word or phrase is missing in each of the sentences below. Four answer choices are given below each sentence. Select the best answer to complete the sentence. Then mark the letter (A), (B), (C), or (D) on your answer sheet.</string>
    <string name="reading_direction_part2">Read the texts that follow. A word or phrase is missing in some of the sentences. Four answer choices are given below each of the sentences. Select the best answer to complete the text. Then mark the letter (A), (B), (C), or (D) on your answer sheet. </string>
    <string name="reading_direction_part3">In this part you will read a selection of texts, such as magazine and newspaper articles, letters, and advertisements. Each text is followed by several questions. Select the best answer for each question and mark the letter (A), (B), (C), or (D) on your answer sheet.</string>
    <string name="listening_direction">In the Listening test, you will be asked to demonstrate how well you understand spoken English. The entire Listening test will last approximately 45 minutes. There are four parts, and directions are given for each part. You must mark your answers on the separate answer sheet. Do not write your answers in your test book</string>
    <string name="listening_direction_part1">For each question in this part, you will hear four statements about a picture in your test book. When you hear the statements, you must select the one statement that best describes what you see in the picture. Then find the number of the question on your answer sheet and mark your answer. The statements will not be printed in your test book and will be spoken only one time. </string>
    <string name="listening_direction_part2">You will hear a question or statement and three responses spoken in English. They will not be printed in your test book and will be spoken only one time. Select the best response to the question or statement and mark the letter (A), (B), or (C) on your answer sheet.</string>
    <string name="listening_direction_part3">You will hear some conversations between two people. You will be asked to answer three questions about what the speakers say in each conversation. Select the best response to each question and mark the letter (A), (B), (C), or (D) on your answer sheet. The conversations will not be printed in your test book and will be spoken only one time.</string>
    <string name="listening_direction_part4">You will hear some talks given by a single speaker. You will be asked to answer three questions about what the speaker says in each talk. Select the best response to each question and mark the letter (A), (B), (C), or (D) on your answer sheet. The talks will not be printed in your test book and will be spoken only one time. </string>
    
    <!-- TUT MESSAGE -->
    <string name="tut1">After chooing the answer, please press "Confirm Button". Without this your answer will not be checked.</string>
    <string name="tut2">Inside a Dialog, press Next or Back button to change the questions.</string>
    <string name="tut3">Notice: Can not go back to the previous dialogs.</string>
    
    <!-- STRING RESULT -->
    <string name="text_score">Score: %1$d/%2$d</string>
    <string name="text_best_score">Best Score: %1$d/%2$d</string>

</resources>