<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnRead"
            style="@style/style_menu_button"
            android:drawableLeft="@drawable/ic_reading"
            android:drawablePadding="5dp"
            android:text="@string/text_menu_read"/>

        <View style="@style/style_menu_devide" />

        <Button
            android:id="@+id/btnListen"
            style="@style/style_menu_button"
            android:drawableLeft="@drawable/ic_listening"
            android:drawablePadding="5dp"
            android:text="@string/text_menu_listen" />

        <View style="@style/style_menu_devide" />

        <Button
            android:id="@+id/btnTip"
            style="@style/style_menu_button"
            android:drawableLeft="@drawable/ic_tip"
            android:drawablePadding="5dp"
            android:text="@string/text_menu_tip" />

        <View style="@style/style_menu_devide" />

        <!-- <Button
            android:id="@+id/btnSetting"
            style="@style/style_menu_button"
            android:text="@string/text_menu_setting" /> -->

        <View style="@style/style_menu_devide" />

        <Button
            android:id="@+id/btnAbout"
            style="@style/style_menu_button"
            android:drawableLeft="@drawable/ic_about"
            android:drawablePadding="5dp"
            android:text="@string/text_menu_about" />
    </LinearLayout>

</ScrollView>